style: apply google-java-format